POWR-134 Video alignment. Fix media entity view.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7215,11 +7215,16 @@ summary {
 
 @media all and (min-width: 560px) {
   .image-align {
-    max-width: 50%; } }
+    max-width: 50%; }
+  .video-align {
+    width: 50%; } }
 
 @media all and (max-width: 560px) {
-  .image-align {
+  .image-align .video-align {
     width: 100%; } }
+
+div.paragraph--type--video figure.figure {
+  width: 100%; }
 
 /**
  * @file
