--- a/web/themes/custom/cloudy/scss/components/field.scss
+++ b/web/themes/custom/cloudy/scss/components/field.scss
@@ -119,9 +119,16 @@
     .image-align {
         max-width: 50%;
     }
+    .video-align {
+        width: 50%;
+    }
 }
 @media all and (max-width: 560px) {
-    .image-align {
+    .image-align .video-align{
         width: 100%;
     }
+}
+
+div.paragraph--type--video figure.figure {
+    width: 100%;
 }
